k8s/youtube/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts:
      - myapp.com
    secretName: ingress-nginx-admission
  rules:
  - host: myapp.com
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
